cluster/demojam-keycloak/demojam-keycloak-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demojam-keycloak
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    openshift.io/cluster-monitoring: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
