cluster/demojam-keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: demojam-keycloak
spec:
  selector:
    app: demojam-keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
