cluster/demojam-keycloak/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  namespace: demojam-keycloak
spec:
  subdomain: demojam-keycloak
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
